--- a/src/css/playerProfile.css
+++ b/src/css/playerProfile.css
@@ -142,3 +142,26 @@
 .toggle-button:hover {
   background-color: #3a3a3a;
 }
+
+.player-summary-profile {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 2rem;
+  text-align: left;
+}
+
+.player-summary {
+  max-width: 100%;
+  padding: 1rem;
+  font-size: 0.85rem;
+}
+
+.player-summary .player-profile-img {
+  width: 80px;
+  height: 80px;
+}
+
+.player-summary .player-info-block {
+  padding-left: 1rem;
+}
