finished the scouting report page

--- a/src/css/playerCard.css
+++ b/src/css/playerCard.css
@@ -1,9 +1,17 @@
 .player-card {
   cursor: grab;
   user-select: none;
-  padding: 0.5rem;
+  position: relative;
+  display: flex;
+  align-items: center;
+  gap: 2.25rem;
+  padding: 0.5rem 0.75rem;
+  border-radius: 10px;
   margin-bottom: 0.5rem;
-  border-radius: 8px;
+  width: 100%;
+  max-width: 320px;
+  height: 100px;
+  box-shadow: 0 4px 12px rgba(0, 0, 0, 0.2);
 }
 
 .player-card:active {
