--- a/src/css/playerProfile.css
+++ b/src/css/playerProfile.css
@@ -158,10 +158,19 @@
 }
 
 .player-summary .player-profile-img {
-  width: 80px;
-  height: 80px;
+  width: 120px;
+  height: 140px;
 }
 
 .player-summary .player-info-block {
   padding-left: 1rem;
+}
+
+.player-summary-header {
+  display: flex;
+  align-items: center;
+  gap: 1rem;
+  width: 100%;
+  max-width: 1000px;
+  margin-bottom: 1.5rem;
 }
