--- a/src/css/scoutPanel.css
+++ b/src/css/scoutPanel.css
@@ -51,3 +51,19 @@
   font-size: 0.75rem;
   margin-left: auto;
 }
+
+.highlight-scroll {
+  animation: flash-border 1.5s ease-in-out;
+}
+
+@keyframes flash-border {
+  0% {
+    box-shadow: 0 0 0 2px rgb(17, 0, 255);
+  }
+  50% {
+    box-shadow: 0 0 0 4px rgb(103, 91, 173);
+  }
+  100% {
+    box-shadow: none;
+  }
+}
