--- a/src/css/playerTable.css
+++ b/src/css/playerTable.css
@@ -5,6 +5,8 @@
   box-shadow: 0 4px 20px rgba(0, 0, 0, 0.2);
   max-height: 330px;
   overflow-y: auto;
+  background-color: #1d1f2b;
+  color: white;
 }
 
 .player-table {
@@ -42,6 +44,7 @@
   font-size: 15px;
   line-height: 1.6;
   box-shadow: 0 4px 12px rgba(0, 0, 0, 0.3);
+  background-color: rgb(49, 50, 63);
 }
 
 .scouting-left {
@@ -102,11 +105,12 @@
 .scouting-report-card {
   display: flex;
   gap: 32px;
-  margin: 2rem;
   margin-left: 3rem;
   margin-right: 3rem;
   padding: 24px 32px;
   border-radius: 12px;
   font-size: 20px;
   box-shadow: 0 4px 12px rgba(0, 0, 0, 0.3);
+  background-color: #1d1f2b;
+  color: white;
 }
