--- a/src/css/currentRoster.css
+++ b/src/css/currentRoster.css
@@ -18,18 +18,17 @@
   border-radius: 10px;
   overflow: hidden;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  color: white;
 }
 
 .mavs-roster thead {
-  background-color: #1d1d1d;
+  background-color: #1d1f2b;
+  color: white;
 }
 
 .mavs-roster th,
 .mavs-roster td {
   padding: 12px 16px;
   text-align: left;
-}
-
-.mavs-roster tbody tr:hover {
-  transition: background-color 0.2s ease-in-out;
+  border-bottom: 1px solid #2a2f44;
 }
