--- a/src/css/navigation.css
+++ b/src/css/navigation.css
@@ -5,6 +5,8 @@
   flex-direction: column;
   padding: 30px 20px;
   box-shadow: 2px 0 5px rgba(0, 0, 0, 0.2);
+  background-color: #1d1f2b;
+  color: white;
 }
 
 .logo {
