--- a/src/css/player.css
+++ b/src/css/player.css
@@ -25,6 +25,7 @@
 .players-title {
   font-weight: bold;
   margin: 0;
+  color: white;
 }
 
 .player-grid {
@@ -38,4 +39,5 @@
   text-align: center;
   margin-top: 2rem;
   font-style: italic;
+  color: white;
 }
