--- a/src/css/playerCard.css
+++ b/src/css/playerCard.css
@@ -12,6 +12,8 @@
   max-width: 320px;
   height: 100px;
   box-shadow: 0 4px 12px rgba(0, 0, 0, 0.2);
+  background-color: rgb(49, 50, 63);
+  color: white;
 }
 
 .player-card:active {
@@ -98,6 +100,8 @@
   height: 100px;
   cursor: pointer;
   box-shadow: 0 4px 12px rgba(0, 0, 0, 0.2);
+  background-color: #1d1f2b;
+  color: white;
 }
 
 .large-profile-picture-panel {
