--- a/src/css/playerProfile.css
+++ b/src/css/playerProfile.css
@@ -6,6 +6,7 @@
   border: none;
   font-size: 1.25rem;
   cursor: pointer;
+  color: white;
 }
 
 .close-button:hover {
@@ -19,6 +20,7 @@
   padding: 2rem;
   text-align: left;
   width: 100%;
+  color: white;
 }
 
 .player-header {
@@ -82,7 +84,7 @@
 }
 
 .game-log-table thead {
-  background-color: #1d1d1d;
+  background-color: #1d1f2b;
   color: white;
 }
 
@@ -90,15 +92,18 @@
   cursor: help;
 }
 
-.scouting-report {
-  width: 100%;
+.scouting-report-player {
   max-width: 1000px;
   height: 150px;
-  padding: 1rem;
   margin-top: 0.5rem;
-  border: 1px solid #555;
-  border-radius: 4px;
   font-size: 0.95rem;
+  background-color: #1d1f2b;
+  color: white;
+  width: 100%;
+  flex-grow: 1;
+  border: none;
+  border-radius: 5px;
+  padding: 10px;
   resize: none;
 }
 
@@ -108,6 +113,8 @@
 
 .action-button {
   margin-top: 1rem;
+  background-color: #1d1f2b;
+  color: white;
 }
 
 .combine-section-grid {
@@ -132,15 +139,12 @@
 .toggle-button {
   margin-top: 1rem;
   padding: 0.5rem 1rem;
-  border: 1px solid #555;
   border-radius: 6px;
   cursor: pointer;
   font-size: 0.95rem;
   width: 50%;
-}
-
-.toggle-button:hover {
-  background-color: #3a3a3a;
+  background-color: #1d1f2b;
+  color: white;
 }
 
 .player-summary-profile {
@@ -149,6 +153,7 @@
   align-items: center;
   padding: 2rem;
   text-align: left;
+  color: white;
 }
 
 .player-summary {
