--- a/src/css/currentRoster.css
+++ b/src/css/currentRoster.css
@@ -30,5 +30,9 @@
 .mavs-roster td {
   padding: 12px 16px;
   text-align: left;
-  border-bottom: 1px solid #2a2f44;
+  border-bottom: 1px solid #1d1f2b;
+}
+
+.free-agent {
+  background-color: #1d1f2bcc;
 }
