--- a/src/css/currentRoster.css
+++ b/src/css/currentRoster.css
@@ -33,6 +33,11 @@
   border-bottom: 1px solid #1d1f2b;
 }
 
-.free-agent {
-  background-color: #1d1f2bcc;
+.free-agent-note {
+  margin-top: 1rem;
+  font-size: 0.9rem;
+  font-style: italic;
+  color: #ccc;
+  text-align: left;
+  padding-left: 12rem;
 }
