--- a/src/css/comparePlayer.css
+++ b/src/css/comparePlayer.css
@@ -1,5 +1,8 @@
 .compare-container {
   display: flex;
+  flex-direction: row;
+  gap: 2rem;
+  width: -webkit-fill-available;
 }
 
 .compare-area {
@@ -10,6 +13,7 @@
 .drop-zones {
   display: flex;
   gap: 2rem;
+  width: 100%;
 }
 
 .drop-zone {
@@ -19,4 +23,29 @@
   padding: 1rem;
   text-align: center;
   background-color: #1d1f2b;
+  position: relative;
+  border-radius: 8px;
+  overflow: hidden;
+}
+
+.drop-wrapper {
+  position: relative;
+  max-height: 100%;
+  overflow-y: auto;
+  padding: 3rem 1rem 1rem 1rem;
+  border-radius: 6px;
+}
+
+.drop-wrapper::-webkit-scrollbar {
+  width: 6px;
+}
+
+.drop-wrapper::-webkit-scrollbar-thumb {
+  background-color: #888;
+  border-radius: 4px;
+}
+
+.highlight-green {
+  color: #4caf50;
+  font-weight: bold;
 }
